# puvs1

source/: CMakeLists.txt  aufgabe-1_10.cpp  aufgabe-1_11.cpp  aufgabe-1_12.cpp  aufgabe-1_13.cpp  aufgabe-1_14.cpp  aufgabe-1_3.cpp  aufgabe-1_8.cpp  aufgabe-1_9.cpp  helloworld.cpp  matmult.cpp  matmult_parallel.cpp  matmult_parallel_2.cpp  mile_to_kilometer.cpp.cpp  puvs1-1.cpp  zaehlen.cpp
textaufgaben/: aufgabe-1_4.txt  aufgabe-1_5.txt  aufgabe-1_6.txt  aufgabe-1_7.txt  glossar-aufgabe-1.16.txt
