add_executable(helloworld helloworld.cpp)
#target_link_libraries(helloworld my_own_library)

add_executable(tests tests.cpp)
add_executable(zaehlen zaehlen.cpp)

# Kommentieren Sie die folgenden Zeilen fuer die Aufgabe `mile_to_kilometer` aus
#add_executable(mile_to_kilometer mile_to_kilometer.cpp)
