add_executable(helloworld helloworld.cpp)
#target_link_libraries(helloworld my_own_library)

add_executable(tests tests.cpp)
add_executable(zaehlen zaehlen.cpp)
add_executable(aufgabe-1_3 aufgabe-1_3.cpp)
add_executable(aufgabe-1_8 aufgabe-1_8.cpp)
add_executable(aufgabe-1_9 aufgabe-1_9.cpp)
add_executable(aufgabe-1_10 aufgabe-1_10.cpp)
add_executable(aufgabe-1_11 aufgabe-1_11.cpp)
add_executable(aufgabe-1_12 aufgabe-1_12.cpp)
add_executable(aufgabe-1_13 aufgabe-1_13.cpp)
add_executable(aufgabe-1_14 aufgabe-1_14.cpp)

# Kommentieren Sie die folgenden Zeilen fuer die Aufgabe `mile_to_kilometer` aus
add_executable(mile_to_kilometer mile_to_kilometer.cpp)
